// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the required icon for fields with hideRequired, but have a state of invalid 1`] = `
<fieldset
  aria-required={true}
  className="radio-field"
  required={true}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-11"
  >
    <div
      className="legend"
    >
      <span
        className="error-icon"
      />
      <div
        aria-hidden="true"
        className="required"
      >
        *
      </div>
      <VisuallyHiddenText
        text="Terra.form.field.required"
      />
      Hidden Required CheckboxField
    </div>
  </legend>
</fieldset>
`;

exports[`should hide the legend when requested 1`] = `
<fieldset
  aria-required={false}
  className="radio-field"
  required={false}
>
  <legend
    className="legend-group legend-group-hidden"
    id="terra-radio-field-description-12"
  >
    <div
      class="application-legend"
      className="legend"
    >
      Hidden Legend legend
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should hide the required indicator when requested 1`] = `
<fieldset
  aria-required={true}
  className="radio-field"
  required={true}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-9"
  >
    <div
      className="legend"
    >
      Hidden Required RadioField
      <span
        className="required-hidden"
      >
        *
      </span>
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a default radio field 1`] = `
<fieldset
  aria-required={false}
  className="radio-field"
  required={false}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-1"
  >
    <div
      className="legend"
    >
      Default RadioField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a default radio field if it has an undefined child 1`] = `
<fieldset
  aria-required={false}
  className="radio-field"
  required={false}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-2"
  >
    <div
      className="legend"
    >
      Default RadioField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render a help message 1`] = `
<fieldset
  aria-required={false}
  className="radio-field"
  required={false}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-5"
  >
    <div
      className="legend"
    >
      Help RadioField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
  <div
    className="help-text"
    id="terra-radio-field-description-help-6"
  >
    This will help up determine how many chairs to request
  </div>
</fieldset>
`;

exports[`should render an invalid radio field 1`] = `
<fieldset
  aria-required={false}
  className="radio-field"
  required={false}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-3"
  >
    <div
      className="legend"
    >
      <span
        className="error-icon"
      />
      Invalid RadioField
    </div>
  </legend>
  <div
    className="error-text"
    id="terra-radio-field-description-error-4"
  >
    Test Error
  </div>
</fieldset>
`;

exports[`should render an optional part on the label 1`] = `
<fieldset
  aria-required={false}
  className="radio-field"
  required={false}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-7"
  >
    <div
      className="legend"
    >
      Optional RadioField
      <span
        className="optional"
      >
        Terra.form.field.optional
      </span>
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render required radio field 1`] = `
<fieldset
  aria-required={true}
  className="radio-field"
  required={true}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-8"
  >
    <div
      className="legend"
    >
      <div
        aria-hidden="true"
        className="required"
      >
        *
      </div>
      <VisuallyHiddenText
        text="Terra.form.field.required"
      />
      Required RadioField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;

exports[`should render the legend with custom attributes properly 1`] = `
<fieldset
  aria-required={false}
  className="radio-field"
  required={false}
>
  <legend
    className="legend-group"
    id="terra-radio-field-description-10"
  >
    <div
      class="application-legend"
      className="legend"
    >
      Custom Legend RadioField
      <span
        className="error-icon-hidden"
      />
    </div>
  </legend>
</fieldset>
`;
